--- a/index.html
+++ b/index.html
@@ -68,6 +68,44 @@
         .custom-button {
             width: 40%;
         }
+
+        .how-to-play-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        .how-to-play-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            width: 90%;
+            max-width: 500px;
+        }
+
+        .how-to-play-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
+            border-bottom: 1px solid #dee2e6;
+            padding-bottom: 10px;
+        }
+
+        .how-to-play-header h5 {
+            margin: 0;
+        }
+
+        .how-to-play-body {
+            padding: 10px 0;
+        }
     </style>
 </head>
 
@@ -76,23 +114,19 @@
         <h2 class="text-center mt-4">4x4 Hindi Words Grid</h2>
         <div class="grid-container" id="grid"></div>
         <div class="text-center mt-3 button-container">
-            <button class="btn btn-primary custom-button" id="resetBtn">Reset/ नए शब्द</button>
-            <button class="btn btn-info custom-button" data-toggle="modal" data-target="#howToPlayModal">
-                How to Play/ कैसे खेलें
+            <button class="btn btn-primary custom-button" id="resetBtn">Reset | नए शब्द</button>
+            <button class="btn btn-info custom-button" onclick="toggleHowToPlay()">
+                How to Play | कैसे खेलें
             </button>
         </div>
 
-        <!-- Add Modal -->
-        <div class="modal fade" id="howToPlayModal" tabindex="-1" role="dialog" aria-labelledby="howToPlayModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="howToPlayModalLabel">How to Play</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
+        <div id="howToPlayDiv" class="how-to-play-overlay" style="display: none;">
+            <div class="how-to-play-content">
+                <div class="how-to-play-header">
+                    <h5>How to Play - कैसे खेलें</h5>
+                    <button class="close-button" onclick="toggleHowToPlay()">Close</button>
+                </div>
+                <div class="how-to-play-body">
                     <div class="modal-body">
                         <div id="enD">
                             <p>
@@ -111,17 +145,12 @@
                             </p>
                         </div>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    </div>
                 </div>
             </div>
         </div>
 
         <!-- Add Bootstrap JavaScript and jQuery dependencies first -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <script src="wordbank.js"></script>
         <!-- Then add your game script -->
         <script>
@@ -214,6 +243,8 @@
                     });
                 }
 
+
+
                 $('#resetBtn').click(function () {
                     //alphabet = getRandomWords().join('').split('');
                     //shuffleGrid();
@@ -235,6 +266,15 @@
                 createGrid();
                 shuffleGrid();
             });
+
+            function toggleHowToPlay() {
+                const howToPlayDiv = document.getElementById('howToPlayDiv');
+                if (howToPlayDiv.style.display === 'none') {
+                    howToPlayDiv.style.display = 'flex';
+                } else {
+                    howToPlayDiv.style.display = 'none';
+                }
+            }
         </script>
 </body>
 
