--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             margin-bottom: 10px;
             padding: 2px;
             background-color: #f8f9fa;
-            min-height: 100px;
+            min-height: 80px;
             transition: background-color 0.3s;
             position: relative;
             display: flex;
@@ -111,7 +111,7 @@
 
 <body>
     <div class="container">
-        <h3 class="text-center mt-4">4x4 Hindi Words Grid</h3>
+        <h3 class="text-center mt-4">4x4 Hindi Words</h3>
         <div class="grid-container" id="grid"></div>
         <div class="text-center mt-3 button-container">
             <button class="btn btn-primary custom-button" id="resetBtn">Reset | नए शब्द</button>
