--- a/index.html
+++ b/index.html
@@ -127,20 +127,17 @@
                     <button class="close-button" onclick="toggleHowToPlay()">Close</button>
                 </div>
                 <div class="how-to-play-body">
-                    <div class="modal-body">
+                    <div>
                         <div id="enD">
                             <p>
-                                Letters of the 4 Hindi words given in this puzzle are shuffled at the start. Click any
-                                of the letter to swap it with another letter by clicking the second box. When the
-                                letters are in right order for any of the words then they will turn green and get
-                                locked.
+                                Find 4 Hindi words given in this puzzle by swaping letters around. Click on first box to
+                                mark it then click another to swap it. Words found will turn green and will be locked.
                             </p>
                         </div>
                         <div id="enH">
                             <p>
-                                यहाँ चार अक्षर के चार शब्द दिये गए हैं लेकिन अक्षरों के क्रम बदल दिये गए हैं जिन्हें
-                                आपको फिर से सही क्रम में जमाना है। आप किसी भी अक्षर को किसी दूसरे अक्षर के साथ बदलने के
-                                लिए पहले अक्षर के डब्बे को क्लिक/टच करें फिर दूसरे अक्षर के डब्बे को क्लिक/टच करें। जब
+                                हिन्दी के चार शब्द दिये गायें हैं जिनके अक्षरों के क्रम बदल दिये गए हैं। आपस में बदलने
+                                के लिए पहले अक्षर के डब्बे को क्लिक करें फिर दूसरे अक्षर के डब्बे को क्लिक करें। जब
                                 कोई शब्द पूरा हो जाएगा तो उसका रंग हरा हो जाएगा और फिर उसके अक्षर स्थिर हो जाएंगे।
                             </p>
                         </div>
