--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4x4 Hindi Words Grid</title>
+    <title>Find Words - शब्द पहचानें</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         .grid-container {
@@ -111,7 +111,7 @@
 
 <body>
     <div class="container">
-        <h3 class="text-center mt-4">4x4 Hindi Words</h3>
+        <h3 class="text-center mt-4">शब्द पहचानें</h3>
         <div class="grid-container" id="grid"></div>
         <div class="text-center mt-3 button-container">
             <button class="btn btn-primary custom-button" id="resetBtn">Reset | नए शब्द</button>
