Updated help menu width

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         }
 
         .help-sidebar {
-            left: -550px;
-            width: 550px;
+            left: -400x;
+            width: 400px;
         }
 
         .right-sidebar {
