--- a/index.html
+++ b/index.html
@@ -359,9 +359,9 @@
             <button class="close-button" onclick="toggleMenu('left')">&times;</button>
         </div>
         <ul class="menu-items">
-            <li>Home</li>
-            <li>About</li>
-            <li>Services</li>
+            <li><a href="https://tomanishp.github.io/matrix" target="_blank">4x4 Grid Puzzle</a></li>
+            <li><a href="https://tomanishp.github.io/hindimatra" target="_blank">Hindi Matra Checking Tool</a></li>
+            <li><a href="https://kavishavi.github.io/hinglishwordle/" target="_blank">Hindi Wordle - By Rahul Upadhyaya</a></li>
             <li>Contact</li>
         </ul>
     </div>
